--- a/package.json
+++ b/package.json
@@ -110,7 +110,8 @@
 		"vue-template-compiler": "^2.6.12",
 		"webpack": "^4.45.0",
 		"webpack-cli": "^4.3.1",
-		"webpack-node-externals": "^2.5.2"
+		"webpack-node-externals": "^2.5.2",
+		"xml2js": "^0.4.23"
 	},
 	"browserslist": [
 		"extends @nextcloud/browserslist-config"
